    of input geometry and raster.
  - ST_Hillshade parameters azimuth and altitude are now in degrees
    instead of radians.
  - ST_Slope and ST_Aspect return pixel values in degrees instead of radians.
  - #1653, Removed srid parameter from ST_Resample(raster) and variants
    with reference raster no longer apply reference raster's SRID.

* Deprecated signatures

  - ST_Estimated_Extent renamed to ST_EstimatedExtent
  - ST_MapAlgebraFctNgb and 1 and 2 raster variants of ST_MapAlgebraFct.
    Use ST_MapAlgebra instead
  - 1 and 2 raster variants of ST_MapAlgebraExpr.
    Use expression variants of ST_MapAlgebra instead
  - #2104, ST_World2RasterCoord, ST_World2RasterCoordX and
    ST_World2RasterCoordY renamed to ST_WorldToRasterCoord,
    ST_WorldToRasterCoordX and ST_WorldToRasterCoordY. ST_Raster2WorldCoord,
    ST_Raster2WorldCoordX and ST_Raster2WorldCoordY renamed to
    ST_RasterToWorldCoord, ST_RasterToWorldCoordX and ST_RasterToWorldCoordY

* New Features *

  - toTopoGeom with TopoGeometry sink (Sandro Santilli / Vizzuality)
  - clearTopoGeom (Sandro Santilli / Vizzuality)
  - ST_Segmentize(geography) (Paul Ramsey / OpenGeo)
  - ST_DelaunayTriangles (Sandro Santilli / Vizzuality)
  - ST_NearestValue, ST_Neighborhood (Bborie Park / UC Davis)
  - ST_PixelAsPoint, ST_PixelAsPoints (Bborie Park / UC Davis)
  - ST_PixelAsCentroid, ST_PixelAsCentroids (Bborie Park / UC Davis)
  - ST_Raster2WorldCoord, ST_World2RasterCoord (Bborie Park / UC Davis)
  - Additional raster/raster spatial relationship functions
    (ST_Contains, ST_ContainsProperly, ST_Covers, ST_CoveredBy, ST_Disjoint,
    ST_Overlaps, ST_Touches, ST_Within, ST_DWithin, ST_DFullyWithin)
    (Bborie Park / UC Davis)
  - Added array variants of ST_SetValues() to set many pixel values of a band
    in one call (Bborie Park / UC Davis)
  - #1643, Tiger Geocoder - Tiger 2011 loader 
    (Regina Obe / Paragon Corporation) Funded by Hunter Systems Group