@@ -13,6 +13,7 @@ PostGIS 2.1.0
   - ST_Slope and ST_Aspect return pixel values in degrees instead of radians.
   - #1653, Removed srid parameter from ST_Resample(raster) and variants
     with reference raster no longer apply reference raster's SRID.
+  - ST_Simplify returns NULL on EMPTY input or single-vertex line output
 
 * Deprecated signatures
 
